Revision history for Net::SFTP::Foreign

1.38  May 20, 2008
        - limit usage of Expect and PTYs to authentication phase (bug
          reported by Tom Warkentin)
        - honour copy_perm option in put method (bug report by Bruce
          Harold)
        - copy_perms option renamed to copy_perm for consistency
          (copy_perms still supported)
        - glob optimization
        - typo in Net::SFTP::Foreign::Common::_set_errno was not
          setting $! correctly (bug report by Rafael Kitover)
        - add debugging support to _do_io and _set_(status|error)

1.36  Apr 18, 2008
        - forbid usage of Net::SFTP::Foreign methods from Compat
          module (bug reported by Fred Zellinger)
        - document the password and passphrase constructor
          options.

1.35  Feb 8, 2008
        - put method was failing for binary files under Windows
          because binmode was not set on the local filehandler (bug
          report and patch by Patrick Frazer).

1.34  Jan 8, 2008
        - document rput. It said it was not implemented (bug report
          by Paul Kolano).

1.33  6 Jan, 2008
        - rremove was not removing dirs (bug report by Paul Kolano).
        - require perl >= 5.6
        - add support for open/close and DESTROY debugging

1.32  8 Dec, 2007
        - add new question to FAQ
        - document password and passphrase options (though, not
          completely).
        - somo minor documentation changes
        - on testing look for sftp-server on libexec dirs
        - and delete temporal files

1.31  8 Oct, 2007
        - remove Win32::Socketpair loading, it is not used anymore
        - improve debugging
        - do not croak when invalid data from the other side appears

1.30  23 Aug, 2007
        - add support for realpath option to ls method
        - add support for realpath and names_only to glob method
        - improve _set_status and _set_error methods