@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Net-SFTP-Foreign
-version:             1.37_06
+version:             1.37_07
 abstract:            Secure File Transfer Protocol client
 license:             ~
 author:              
